tests/paczka1/small_fuzzy/28633080.err
Error in line 9: A323 S20 70,5
Error in line 12: A323 A323 91,3
